--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body>
-        <header class = "container-fluid">
-            <nav class = "navbar navbar-inverse navbar-fixed-top">
+        <header class = "container-fluid minus-padding">
+            <nav class = "navbar navbar-inverse navbar-static-top">
                     <div class = "navbar-header">
-                        <a class = "navbar-brand" href = "index.html"><img src = "assets/images/logo.png" width = "150px" height = "150px" alt = "Websites logo"/></a>
+                        <a class = "navbar-brand padding-logo-left" href = "index.html"><img src = "assets/images/logo.png" width = "150px" height = "150px" alt = "Websites logo"/></a>
                             <button type = "button" class = "navbar-toggle collapsed" data-toggle = "collapse" data-target = "#myCollapsingList">
                                 <span class = "icon-bar"></span>
                                 <span class = "icon-bar"></span>
@@ -27,12 +27,12 @@
         </header>
         <section class = "container-fluid">
             <div class = "row">
-                <div class = "col-xs-12 col-sm-12 bg-strip-red">
-                    
+                <div class = "col-xs-12 col-sm-12 bg-strip-red bg-strip-red-push-content-down">
+                    <h6 class = "add-padding">Home</h6>
                 </div>
             </div>
-            <div class = "row">
-                <div class = "col-xs-12 col-sm-12 col-md-4">
+            <div class = "add-padding row">
+                <div class = "col-xs-12 col-sm-6 col-md-4">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                     magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
@@ -54,7 +54,7 @@
                     modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
                     in futurum.
                 </div>
-                <div class = "col-xs-12 col-sm-12 col-md-4">
+                <div class = "col-xs-12 col-sm-6 col-md-4">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                     magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
@@ -76,7 +76,7 @@
                     modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
                     in futurum.
                 </div>
-                <div class = "col-xs-12 col-sm-12 col-md-4">
+                <div class = "col-xs-12 col-sm-6 col-md-4">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                     magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
