--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                 </div>
             </div>
             <div class = "add-padding row">
-                <div class = "col-xs-12 col-sm-6 col-md-4">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/> 
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                     magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
                     quis nostrud exerci tation ullamcorper suscipit lobortis nisl
@@ -53,9 +54,11 @@
                     humanitatis per seacula quarta decima et quinta decima. Eodem
                     modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
                     in futurum.
+                    </p>
                 </div>
-                <div class = "col-xs-12 col-sm-6 col-md-4">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                <div class = "col-xs-12 col-sm-6 col-md-8 col-lg-8 media-big-screen">
+                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                     magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
                     quis nostrud exerci tation ullamcorper suscipit lobortis nisl
@@ -75,29 +78,32 @@
                     humanitatis per seacula quarta decima et quinta decima. Eodem
                     modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
                     in futurum.
+                    </p>
                 </div>
-                <div class = "col-xs-12 col-sm-6 col-md-4">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-                    ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-                    dolor in hendrerit in vulputate velit esse molestie consequat,
-                    vel illum dolore eu feugiat nulla facilisis at vero eros et
-                    accumsan et iusto odio dignissim qui blandit praesent luptatum
-                    zzril delenit augue duis dolore te feugait nulla facilisi.
-                    Nam liber tempor cum soluta nobis eleifend option congue
-                    nihil imperdiet doming id quod mazim placerat facer possim
-                    assum. Typi non habent claritatem insitam; est usus legentis
-                    in iis qui facit eorum claritatem. Investigationes
-                    demonstraverunt lectores legere me lius quod ii legunt saepius.
-                    Claritas est etiam processus dynamicus, qui sequitur mutationem
-                    consuetudium lectorum. Mirum est notare quam littera gothica,
-                    quam nunc putamus parum claram, anteposuerit litterarum formas
-                    humanitatis per seacula quarta decima et quinta decima. Eodem
-                    modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
-                    in futurum.
-                </div>
+                <!--<div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">-->
+                <!--    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>-->
+                <!--    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,-->
+                <!--    sed diam nonummy nibh euismod tincidunt ut laoreet dolore-->
+                <!--    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,-->
+                <!--    quis nostrud exerci tation ullamcorper suscipit lobortis nisl-->
+                <!--    ut aliquip ex ea commodo consequat. Duis autem vel eum iriure-->
+                <!--    dolor in hendrerit in vulputate velit esse molestie consequat,-->
+                <!--    vel illum dolore eu feugiat nulla facilisis at vero eros et-->
+                <!--    accumsan et iusto odio dignissim qui blandit praesent luptatum-->
+                <!--    zzril delenit augue duis dolore te feugait nulla facilisi.-->
+                <!--    Nam liber tempor cum soluta nobis eleifend option congue-->
+                <!--    nihil imperdiet doming id quod mazim placerat facer possim-->
+                <!--    assum. Typi non habent claritatem insitam; est usus legentis-->
+                <!--    in iis qui facit eorum claritatem. Investigationes-->
+                <!--    demonstraverunt lectores legere me lius quod ii legunt saepius.-->
+                <!--    Claritas est etiam processus dynamicus, qui sequitur mutationem-->
+                <!--    consuetudium lectorum. Mirum est notare quam littera gothica,-->
+                <!--    quam nunc putamus parum claram, anteposuerit litterarum formas-->
+                <!--    humanitatis per seacula quarta decima et quinta decima. Eodem-->
+                <!--    modo typi, qui nunc nobis videntur parum clari, fiant sollemnes-->
+                <!--    in futurum.-->
+                <!--    </p>-->
+                <!--</div>-->
             </div>
         </section>
     </body>
