--- a/index.html
+++ b/index.html
@@ -48,6 +48,63 @@
                 </div>
             </div>
         </section>
+        <section class = "container-fluid">
+            <div class = "add-padding row">
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <h6 class = "home-page-headings">Services</h6>
+                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/> 
+                        <p>We offer a wide range of services including new builds, 
+                        roofing, decking, renovations, extensions. We also fit replacement 
+                        windows and doors for homes and mobile homes. We build sun rooms, 
+                        conservatories and porches. We also offer services on drain blockage 
+                        removals.</p>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <h6 class = "home-page-headings">Services</h6>
+                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/> 
+                        <p>With the past thirty years experience in the building and construction
+                        area we have gained the confidence and expertise to perform any task. We
+                        specialise in new builds, extensions, renovations, decking and roofing.</p>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <form class = "form-horizontal">
+                        <fieldset>
+                            <legend> Get A Quick Quote</legend>
+                            
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="email">Email:</label>
+                                <div class="col-sm-10">
+                                  <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="name">Name:</label>
+                                <div class="col-sm-10">
+                                  <input type="name" class="form-control" id="name" placeholder="Enter your name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="number">Mobile:</label>
+                                <div class="col-sm-10">
+                                  <input type="tel" class="form-control" id="number" pattern="08+[0-9]{1}[0-9]{7}" placeholder="Enter your number">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="textarea">Details:</label>
+                                <div class="col-sm-10">
+                                  <textarea class="form-control" id = "textarea" placeholder="Enter details" rows = "4" cols = "26"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group"> 
+                                <div class="col-sm-offset-2 col-sm-10">
+                                  <button type="submit" class="btn btn-default">Submit</button>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </section>
     </body>
     <script src = "https://code.jquery.com/jquery.min.js"></script>
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
