--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class = "add-padding row bg-content-screen">
-                <div class = "col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class = "col-xs-12 col-sm-12 col-md-4 col-lg-5">
                     <h6 class = "home-page-headings">Who We Are</h6>
                     <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/> 
                         <p>K.Barnes Construction has being involved in the building industry 
@@ -42,7 +42,7 @@
                            new builds, apartment blocks, schools, sun rooms, attic conversions,
                            renovations and conservatories.</p>
                 </div>
-                <div class = "col-xs-12 col-sm-12 col-md-8 col-lg-8 media-big-screen">
+                <div class = "col-xs-12 col-sm-12 col-md-8 col-lg-7 media-big-screen">
                     <h6 class = "home-page-headings media-big-screen-heading-move-right">Portfolio</h6>
                     <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                 </div>
@@ -58,6 +58,14 @@
                         windows and doors for homes and mobile homes. We build sun rooms, 
                         conservatories and porches. We also offer services on drain blockage 
                         removals.</p>
+                        
+                        <div class = "services-links">
+                           <a href="#">New Builds</a> 
+                           <a href="#">Decking</a> 
+                           <a href="#">Renovations</a> 
+                           <a href="#">Roofing</a> 
+                           <a href="#">Extensions</a>
+                        </div>
                 </div>
                 <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <h6 class = "home-page-headings">Services</h6>
@@ -67,7 +75,7 @@
                         specialise in new builds, extensions, renovations, decking and roofing.</p>
                 </div>
                 <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                    <form class = "form-horizontal">
+                    <form class = "form-horizontal form-push-down">
                         <fieldset>
                             <legend> Get A Quick Quote</legend>
                             
@@ -105,7 +113,24 @@
                 </div>
             </div>
         </section>
+        <footer class = "container-fluid">
+            <div class = "row add-padding bg-footer">
+                <div class = "col-sm-4">
+                    <p>Mobile: 086 8253303</p>
+                    <p>Location: Courtown, Co. Wexford</p>
+                    <p>Email: jdcconstruction@gmail.com</p>
+                </div>
+                <div class = "col-sm-4">
+                    <p>Copyright 2017</p>
+                    <p>All rights reserved</p>
+                </div>
+                <div class = "col-sm-4">
+                    <p>Connect with us</p>
+                </div>
+            </div>
+        </footer>
     </body>
     <script src = "https://code.jquery.com/jquery.min.js"></script>
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </html>
