--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header class = "container-fluid minus-padding">
-            <nav class = "navbar navbar-inverse navbar-static-top">
+            <nav class = "navbar navbar-inverse">
                     <div class = "navbar-header">
                         <a class = "navbar-brand padding-logo-left" href = "index.html"><img src = "assets/images/logo.png" width = "150px" height = "150px" alt = "Websites logo"/></a>
                             <button type = "button" class = "navbar-toggle collapsed" data-toggle = "collapse" data-target = "#myCollapsingList">
@@ -16,9 +16,9 @@
                             </button>
                     </div>
                     <ul id = "myCollapsingList" class = "nav navbar-nav collapse navbar-collapse navbar-right">
-                        <li><a href = "#">Home</a></li>
+                        <li><a href = "index.html">Home</a></li>
                         <li><a href = "#">About</a></li>
-                        <li><a href = "#">Services</a></li>
+                        <li><a href = "services.html">Services</a></li>
                         <li><a href = "#">Portfolio</a></li>
                         <li><a href = "#">Testimonials</a></li>
                         <li><a href = "#">Contact Us</a></li>
