Services page finished

--- a/services.html
+++ b/services.html
@@ -68,6 +68,100 @@
                     <img src = "assets/images/21portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                 </div>
             </div>
+            <div class = "add-padding row">
+                <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h6 class = "home-page-headings">Decking</h6>
+                        <p>We design, supply and build decking to add on to your home 
+                        and mobile home which will give more purpose to and value to your 
+                        home. It will add size to your property and will provide a good 
+                        area for having bbq's on those lovely summer days.</p>
+                </div>
+            </div>
+            <div class = "add-padding row services-img-margin-up-down">
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/8portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/9portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/10portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/11portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/12portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+            </div>
+            <div class = "add-padding row">
+                <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h6 class = "home-page-headings">Renovations</h6>
+                        <p>If you think your property is due a change and an upgrade we are 
+                        more than happy to help you to bring new life to your property. 
+                        We are more than happy to have a look at your property and to 
+                        hear the ideas that you might have for your renovations. 
+                        We take great pride in renovation work and with our thirty 
+                        years experience we have the confidence to deliver you with 
+                        a new way of how you will look and feel about your property.</p>
+                </div>
+            </div>
+            <div class = "add-padding row services-img-margin-up-down">
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/14portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/15portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/16portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/17portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/18portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/19portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+            </div>
+            <div class = "add-padding row">
+                <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h6 class = "home-page-headings">Roofing</h6>
+                        <p>Roofs are one of the main things that protect your house. 
+                        As long as a roof is properly maintained a roof can have a 
+                        very long lifespan. Overtime parts of your roof such as slates 
+                        and tiles will break due to old age and bad weather damage. 
+                        This will leave your roof prone to water damage and leakage. 
+                        We are here to help if this happens. We are experts at slating, 
+                        tiling and also we have many years experience with flat roofing. 
+                        When you use our services you will be guaranteed top quality 
+                        roofing materials, fitted with the most up to date methods 
+                        leaving you feeling one hundred percent satisfied with our 
+                        high standard work.</p>
+                        <p class = "services-roofing-p-bold">Pictures to follow soon</p>
+                </div>
+            </div>
+            <div class = "add-padding row">
+                <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h6 class = "home-page-headings">Renovations</h6>
+                        <p>If you are looking to extend the size of your property 
+                        and add value to your property well then an extension is 
+                        what you are looking for. We have years of experience with 
+                        building and constructing extensions. We listen carefully 
+                        to our clients to what they want in the build. We use the 
+                        most up to date materiels such as the latest insulation 
+                        and triple glazing windows. With our experience and expertise 
+                        we can quarantee that you will be truly happy with the 
+                        finished extension and you will see your property in a new way.</p>
+                </div>
+            </div>
+            <div class = "add-padding row services-img-margin-up-down">
+                <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3 form-group">
+                    <img src = "assets/images/20portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                </div>
+            </div>
         </section>
         <footer class = "container-fluid">
             <div class = "row add-padding bg-footer">
