Slideshow implemented. Few changes needed

--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
             </div>
         </section>
         <section class = "container-fluid">
-            <div class = "add-padding row">
+            <div class = "add-padding row" id = "services-newBuilds">
                 <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h6 class = "home-page-headings">New Builds</h6>
                         <p>We offer a number of different type of builds such as block and 
@@ -68,7 +68,7 @@
                     <img src = "assets/images/21portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                 </div>
             </div>
-            <div class = "add-padding row">
+            <div class = "add-padding row" id = "services-decking">
                 <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h6 class = "home-page-headings">Decking</h6>
                         <p>We design, supply and build decking to add on to your home 
@@ -94,7 +94,7 @@
                     <img src = "assets/images/12portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                 </div>
             </div>
-            <div class = "add-padding row">
+            <div class = "add-padding row" id = "services-renovations">
                 <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h6 class = "home-page-headings">Renovations</h6>
                         <p>If you think your property is due a change and an upgrade we are 
@@ -126,7 +126,7 @@
                     <img src = "assets/images/19portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
                 </div>
             </div>
-            <div class = "add-padding row">
+            <div class = "add-padding row" id = "services-roofing">
                 <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h6 class = "home-page-headings">Roofing</h6>
                         <p>Roofs are one of the main things that protect your house. 
@@ -143,9 +143,9 @@
                         <p class = "services-roofing-p-bold">Pictures to follow soon</p>
                 </div>
             </div>
-            <div class = "add-padding row">
+            <div class = "add-padding row" id = "services-extensions">
                 <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h6 class = "home-page-headings">Renovations</h6>
+                    <h6 class = "home-page-headings">Extensions</h6>
                         <p>If you are looking to extend the size of your property 
                         and add value to your property well then an extension is 
                         what you are looking for. We have years of experience with 
