Testimonials page implemented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href = "#">About</a></li>
                         <li><a href = "services.html">Services</a></li>
                         <li><a href = "#">Portfolio</a></li>
-                        <li><a href = "#">Testimonials</a></li>
+                        <li><a href = "testimonials.html">Testimonials</a></li>
                         <li><a href = "#">Contact Us</a></li>
                     </ul>
                 </nav>
@@ -71,7 +71,7 @@
         <section class = "container-fluid">
             <div class = "add-padding row">
                 <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                    <h6 class = "home-page-headings">Services</h6>
+                    <h6 class = "middle-home-page-headings">Services</h6>
                     <img src = "assets/images/2portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/> 
                         <p>We offer a wide range of services including new builds, 
                         roofing, decking, renovations, extensions. We also fit replacement 
@@ -89,7 +89,7 @@
                 </div>
                 <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <div class = "history-items">
-                        <h6 class = "home-page-headings">Our Last Four Projects</h6>
+                        <h6 class = "middle-home-page-headings">Our Last Four Projects</h6>
                         <div class = "timeline-item" dates = "02/2014 - 12/2014">
                             <h4>12 Apartments Built In Riverchapel</h4>
                             <p>Courtown, Co. Wexford</p>
