--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
                         <li><a href = "#">About</a></li>
                         <li><a href = "services.html">Services</a></li>
                         <li><a href = "#">Portfolio</a></li>
-                        <li><a href = "#">Testimonials</a></li>
+                        <li><a href = "testimonials.html">Testimonials</a></li>
                         <li><a href = "#">Contact Us</a></li>
                     </ul>
                 </nav>
