footer modification part1

--- a/testimonials.html
+++ b/testimonials.html
@@ -5,6 +5,7 @@
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body>
+        <div class = "body-substitute">
         <header class = "container-fluid minus-padding">
             <nav class = "navbar navbar-inverse">
                     <div class = "navbar-header">
@@ -40,7 +41,7 @@
             </div>
             <div class = "add-padding row">
                 <div class = "col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class = "panel-group footer-static-bottom-push-content-up" id = "accordion">
+                    <div class = "panel-group" id = "accordion">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
@@ -106,6 +107,7 @@
         </section>
         <footer class = "container-fluid footer-static-bottom">
             <div class = "row add-padding bg-footer">
+                <div class = "slide">
                 <div class = "col-sm-4">
                     <p>Mobile: 086 8253303</p>
                     <p>Location: Courtown, Co. Wexford</p>
@@ -118,8 +120,10 @@
                 <div class = "col-sm-4">
                     <p>Connect with us</p>
                 </div>
+                </div>
             </div>
         </footer>
+        </div>
     </body>
     <script src = "https://code.jquery.com/jquery.min.js"></script>
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
