Fixed footer fitted to all pages no matter what screen size

--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
         <link rel = "stylesheet" href =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
-    <body>
+    <body class="extra-mobile-padding">
         <div class = "body-substitute">
         <header class = "container-fluid minus-padding">
             <nav class = "navbar navbar-inverse">
@@ -107,7 +107,6 @@
         </section>
         <footer class = "container-fluid footer-static-bottom">
             <div class = "row add-padding bg-footer">
-                <div class = "slide">
                 <div class = "col-sm-4">
                     <p>Mobile: 086 8253303</p>
                     <p>Location: Courtown, Co. Wexford</p>
@@ -119,7 +118,6 @@
                 </div>
                 <div class = "col-sm-4">
                     <p>Connect with us</p>
-                </div>
                 </div>
             </div>
         </footer>
