--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel = "stylesheet" href =  "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
         <link rel = "stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
-    <body>
+    <body class="extra-mobile-padding">
         <header class = "container-fluid minus-padding">
             <nav class = "navbar navbar-inverse">
                     <div class = "navbar-header">
