--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     </div>
                     <ul id = "myCollapsingList" class = "nav navbar-nav collapse navbar-collapse navbar-right">
                         <li><a href = "index.html">Home</a></li>
-                        <li><a href = "#">About</a></li>
+                        <li><a href = "about.html">About</a></li>
                         <li><a href = "services.html">Services</a></li>
                         <li><a href = "#">Portfolio</a></li>
                         <li><a href = "testimonials.html">Testimonials</a></li>
