website content complete. Still css changes to be made

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                         <li><a href = "index.html">Home</a></li>
                         <li><a href = "about.html">About</a></li>
                         <li><a href = "services.html">Services</a></li>
-                        <li><a href = "#">Portfolio</a></li>
+                        <li><a href = "portfolio.html">Portfolio</a></li>
                         <li><a href = "testimonials.html">Testimonials</a></li>
                         <li><a href = "contact.html">Contact Us</a></li>
                     </ul>
@@ -28,43 +28,33 @@
         <section class = "container-fluid">
             <div class = "row">
                 <div class = "col-xs-12 col-sm-12 bg-strip-red bg-strip-red-push-content-down">
-                    <h6 class = "add-padding">About</h6>
-                </div>
-            </div>
-            <div class = "add-padding row">
-                <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                        <p>K Barnes Construction has been involved in the construction 
-                        industry for the past 30 years and with this time and experience 
-                        we have the capability and track record to perform any task. 
-                        Located in Courtown, Co. Wexford. The majority of work that we 
-                        carry out range from Wexford to Dublin.
-                        Whether the job is a new build, an extension or a renovation 
-                        K Barnes Construction Services can meet any challenge.
-                        We take great interest in listening to our clients and to ensure 
-                        that we fully understand the project that will be undertaking 
-                        and any concerns that the client has about particular aspects 
-                        of the project in hand.</p>
-                </div>
-                <div class = "col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src = "assets/images/1portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
-                </div>
-            </div>
-        </section>
-        <section class = "container-fluid">
-            <div class = "add-padding row">
-                <div class = "col-xs-12 col-sm-12 col-md-8 col-md-offset-2">
-                    <h6 class = "middle-home-page-headings">Block Laying At One Of Our Building Sites</h6>
-                    <video controls= "controls" preload="metadata">
-                        <source src="assets/video/block_laying.mp4" type="video/mp4"/>
-                    </video>
+                    <h6 class = "add-padding">Home</h6>
                 </div>
             </div>
             <div class = "add-padding row">
                 <div class = "col-xs-12 col-sm-12 col-md-8 col-md-offset-2">
-                    <h6 class = "middle-home-page-headings">Sounds At Our Construction Site</h6>
-                    <audio controls= "controls" preload="metadata">
-                        <source src="assets/sounds/construction.mp3" type="audio/mpeg; codecs=mp3"/>
-                    </audio>
+                    <h6 class = "home-page-headings">Portfolio</h6>
+                    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                          <!-- Indicators -->
+                          <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                          </ol>
+                    
+                          <!-- Wrapper for slides -->
+                          <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                              <img src = "assets/images/2portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/3portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                            <div class="item">
+                              <img src = "assets/images/4portfolio.jpg" width = "900px" height = "506px" alt = "pic1" class = "img-responsive"/>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
